--- a/mobile-app/build.gradle
+++ b/mobile-app/build.gradle
@@ -1,17 +1,19 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.ext.sdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId 'com.nilhcem.blefun.mobile'
-        minSdkVersion 18
+        applicationId "fi.zalando.bikeblinker"
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.sdkVersion
         versionCode 1
-        versionName '1.0'
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -21,7 +23,11 @@ android {
 }
 
 dependencies {
-    compile project(':common')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'no.nordicsemi.android.support.v18:scanner:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'no.nordicsemi.android.support.v18:scanner:1.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
