--- a/mobile-app/src/main/AndroidManifest.xml
+++ b/mobile-app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.nilhcem.blefun.mobile"
+<manifest package="fi.zalando.bikeblinker"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
